[gd_scene load_steps=2 format=2]

[ext_resource path="res://ShopUI.gd" type="Script" id=1]

[node name="ShopUI" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -101.0
margin_top = -74.0
margin_right = 101.0
margin_bottom = 74.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 202.0
margin_bottom = 14.0
text = "Shop"
align = 1

[node name="Sword" type="Button" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 202.0
margin_bottom = 38.0
text = "Genji Sword +1BP (5G)"

[node name="Armour" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 202.0
margin_bottom = 62.0
text = "Genji Armour +2BP (10G)"

[node name="Boots" type="Button" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 202.0
margin_bottom = 86.0
text = "Genji Boots +3BP (20G)"

[node name="Potion" type="Button" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 202.0
margin_bottom = 110.0
text = "Lorem ipsup"

[node name="Close" type="Button" parent="VBoxContainer"]
margin_top = 114.0
margin_right = 202.0
margin_bottom = 134.0
text = "Close"
[connection signal="pressed" from="VBoxContainer/Sword" to="." method="_on_Sword_pressed"]
[connection signal="pressed" from="VBoxContainer/Armour" to="." method="_on_Armour_pressed"]
[connection signal="pressed" from="VBoxContainer/Boots" to="." method="_on_Boots_pressed"]
[connection signal="pressed" from="VBoxContainer/Potion" to="." method="_on_Potion_pressed"]
[connection signal="pressed" from="VBoxContainer/Close" to="." method="_on_Close_pressed"]
